# SM64SaveEditor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/SDL3/: SDL_revision.h
include/glad/: gl.h
include/imgui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
lib/: glfw3.lib
src/: AboutWindow.cpp  AboutWindow.h  BaseUI.cpp  BaseUI.h  CMakeLists.txt  Config.h  Config.h.in  GLState.cpp  GLState.h  MainUI.cpp  MainUI.h  PopupDialog.cpp  PopupDialog.h  SaveData.cpp  SaveData.h  SaveEditorUI.cpp  SaveEditorUI.h  Utils.h  Window.cpp  Window.h  WindowSDL.cpp  WindowSDL_GL.cpp  WindowSDL_GL.h  main.cpp  main.h  resources.rc  resources.rc.in  sm64.ttf.h
src/Game/: GameMenuUI.cpp  GameMenuUI.h  SaveData.cpp  SaveData.h  SaveEditorUI.cpp  SaveEditorUI.h  SaveFile.cpp  SaveFile.h  sm64.ttf.h
src/imgui/: imconfig.h
